--- a/docs/_releases/v4.0.23.md
+++ b/docs/_releases/v4.0.23.md
@@ -22,7 +22,7 @@ The big ticket feature in this release is the new [AutoQuery](/autoquery) featur
 
 AutoQuery also benefits from just being normal ServiceStack Services where you can re-use existing knowledge in implementing, customizing, introspecting and consuming ServiceStack services, i.e:
 
- - Utilizes the same customizable [Request Pipeline](?/order-of-operations)
+ - Utilizes the same customizable [Request Pipeline](/order-of-operations)
  - AutoQuery services can be mapped to any [user-defined route](/routing)
  - Is available in all [registered formats](/formats)
    - The [CSV Format](/csv-format) especially shines in AutoQuery who's tabular result-set are perfect for CSV
