--- a/docs/_releases/v4.0.54.md
+++ b/docs/_releases/v4.0.54.md
@@ -798,7 +798,7 @@ The default implementation of `GetDbConnection(IRequest)` includes an easy way t
 that can be done by populating the 
 [ConnectionInfo](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack/ConnectionInfo.cs) 
 POCO in any
-[Request Filter in the Request Pipeline](?/order-of-operations):
+[Request Filter in the Request Pipeline](/order-of-operations):
 
 ```csharp
 req.Items[Keywords.DbInfo] = new ConnectionInfo {
@@ -872,7 +872,7 @@ GlobalRequestFilters.Add((req, res, dto) => {
 
 Since our `IChangeDb` interface shares the same property names as `ConnectionInfo`, the above code can be 
 further condensed using a 
-[Typed Request Filter](?/request-and-response-filters#typed-request-filters)
+[Typed Request Filter](/request-and-response-filters#typed-request-filters)
 and ServiceStack's built-in [AutoMapping](/auto-mapping)
 down to just:
 
