--- a/docs/_releases/v4.0.58.md
+++ b/docs/_releases/v4.0.58.md
@@ -116,7 +116,7 @@ ApiKey apiKey = req.GetApiKey();
 ```
 
 The `ApiKey` can be later inspected throughout the 
-[request pipeline](?/order-of-operations)
+[request pipeline](/order-of-operations)
 to determine which API Key, Type and Environment was used.
 
 #### Interoperable
