--- a/docs/_releases/v4.0.50.md
+++ b/docs/_releases/v4.0.50.md
@@ -29,7 +29,7 @@ This comes in useful when migrating existing sessions and populating properties 
 #### Registered Type Filters on IAppHost
 
 To make it easier for plugins to register 
-[Typed Filters](?/request-and-response-filters#typed-request-filters)
+[Typed Filters](/request-and-response-filters#typed-request-filters)
 , their Registration APIs are now available on IAppHost as well, e.g:
 
 ```csharp
