--- a/docs/_releases/v5.1.0.md
+++ b/docs/_releases/v5.1.0.md
@@ -92,7 +92,7 @@ As these release notes have become apologetically long we're including a Table o
   - [Order by dynamic expressions](#order-by-dynamic-expressions)
   - [New BeforeExecFilter and AfterExecFilter filters](#new-beforeexecfilter-and-afterexecfilter-filters)
   - [Typed Sql.Cast() SQL Modifier](#typed-sqlcast-sql-modifier)
-  - [Typed Column<T> and Table<T> APIs](#typed-columnt-and-tablet-apis)
+  - [Typed Column and Table APIs](#typed-columnt-and-tablet-apis)
   - [Dapper Upgraded](#dapper-upgraded)
   - [New Live Create Table Schemas Example](#new-live-create-table-schemas-example)
 
