manually linkify links

--- a/docs/_releases/v5.1.0.md
+++ b/docs/_releases/v5.1.0.md
@@ -811,7 +811,7 @@ In a new terminal window start a watched Nuxt dev server build with:
 
     $ npm run dev
 
-Then open http://localhost:3000 in your browser to view your App served directly from Nuxt's dev server which will proxy all Server requests to ServiceStack Server running on http://localhost:5000. Any changes you make to your front-end will be automatically re-compiled and reloaded by the watched `Nuxt` build whilst any changes to your Server app will be automatically be rebuilt and restarted by the watched `dotnet` process.
+Then open `http://localhost:3000` in your browser to view your App served directly from Nuxt's dev server which will proxy all Server requests to ServiceStack Server running on `http://localhost:5000`. Any changes you make to your front-end will be automatically re-compiled and reloaded by the watched `Nuxt` build whilst any changes to your Server app will be automatically be rebuilt and restarted by the watched `dotnet` process.
 
 ### Update DTOs
 
@@ -830,7 +830,7 @@ Most of the time during development you'll be viewing your App through Nuxt's de
 
 This will generate a static encapsulated production build of your App in .NET Core's `/wwwroot` which you can view served from your ServiceStack Server App directly at:
 
- - http://localhost:5000
+ - [http://localhost:5000](http://localhost:5000)
 
 
 ### Publishing App for Deployment
@@ -914,13 +914,13 @@ For comparison purposes we're continuing to host the old Website:
 
 #### New TechStacks
 
-  - URL: https://techstacks.io
-  - Source Code: https://github.com/NetCoreApps/TechStacks
+  - URL: [techstacks.io](https://techstacks.io)
+  - Source Code: [github.com/NetCoreApps/TechStacks](https://github.com/NetCoreApps/TechStacks)
 
 #### Old TechStacks
 
-  - URL: http://angular.techstacks.io
-  - Source Code: https://github.com/ServiceStackApps/TechStacks
+  - URL: [angular.techstacks.io](http://angular.techstacks.io)
+  - Source Code: [github.com/ServiceStackApps/TechStacks](https://github.com/ServiceStackApps/TechStacks)
 
 Both code-bases are Open Source and provide a good reference of our preferences in developing a mildly complex medium-sized ServiceStack App which now exceeds **100 Services** to support its expanded feature-set.
 
@@ -947,9 +947,9 @@ export const client = new JsonServiceClient(BaseUrl);
 export const authClient = new JsonServiceClient(AuthBaseUrl); 
 ```
 
-Where https://techstacks.io serves the static website hosted from Netlify's CDN and https://www.techstacks.io serves content directly from the App Server via an nginx reverse proxy.
+Where [https://techstacks.io](https://techstacks.io) serves the static website hosted from Netlify's CDN and [https://www.techstacks.io](https://www.techstacks.io) serves content directly from the App Server via an nginx reverse proxy.
 
-The different domains means we need to transfer the Authenticated Session that's attached to https://techstacks.io by converting the Authenticated Session into a JWT Token that's sent to the App Server in parallel requests to retrieve the Authenticated User Info and convert the JWT Token into a Cookie so it's re-sent on every subsequent request to the App Server: 
+The different domains means we need to transfer the Authenticated Session that's attached to the [techstacks.io](https://techstacks.io) domain by converting the Authenticated Session into a JWT Token that's sent to the App Server in parallel requests to retrieve the Authenticated User Info and convert the JWT Token into a Cookie so it's re-sent on every subsequent request to the App Server: 
 
 ```ts
 export const getSessionInfo = async() => {
@@ -1018,7 +1018,7 @@ Our choice to develop TechStacks as a Nuxt SPA lets us add high-productivity fea
 
 The new TechStacks ServiceStack Community is open and available at: 
 
-### https://techstacks.io/servicestack
+### [techstacks.io/servicestack](https://techstacks.io/servicestack)
 
 It's now open to all ServiceStack Customers to ask questions, submit posts and feature requests or showcase their creations or useful projects they would like to share to the rest of the Community. Currently Sign In's are currently limited to GitHub and Twitter Accounts where you'll need to [register your email or GitHub username](https://servicestack.net/account/support) before signing in.
 
