--- a/docs/_releases/v5.1.0.md
+++ b/docs/_releases/v5.1.0.md
@@ -108,7 +108,7 @@ As these release notes have become apologetically long we're including a Table o
   - [Native Type Wildcards](#native-type-wildcards)
     - Include Request DTO and its dependent types
     - Include All Types within a C# namespace
-    - Use a different BaseUrl
+  - [Use a different BaseUrl](#use-a-different-baseurl)
   - [Call Internal and External Services from URLs](#call-internal-and-external-services-from-urls)
 
 **[ServiceStack](#servicestack)**
@@ -150,7 +150,7 @@ In addition to the different platforms, Dart 2 enables Strong Mode where [Dart's
 We're happy to report that Dart ServiceStack Reference supports **all Dart platforms!** with and without Dart 2's Strong Mode - in the same optimal development workflow pioneered in [Add ServiceStack Reference](/add-servicestack-reference) where it doesn't requiring any additional tooling, transformers or build steps. 
 
 Due to the lack of reflection and Mirror support, consuming JSON APIs can be quite [cumbersome in Flutter](https://flutter.io/cookbook/networking/fetch-data/). But we've been able to achieve the same productive development experience available in [all supported languages](/add-servicestack-reference) where you can use the generated Dart DTOs from any remote v5.1+ ServiceStack endpoint with ServiceStack's Smart generic
-[JsonServiceClient](https://pub.dartlang.org/documentation/servicestack/0.0.7/client/JsonServiceClient-class.html) available in the [servicestack](https://pub.dartlang.org/packages/servicestack#-installing-tab-) Dart package, to enable an end-to-end Typed API for calling Services by [sending and receiving rich native DTOs](/architecture-overview#client-architecture).
+[JsonServiceClient](https://pub.dartlang.org/documentation/servicestack/0.0.7/client/JsonServiceClient-class.html) available in the [servicestack Dart package](https://pub.dartlang.org/packages/servicestack#-installing-tab-), to enable an end-to-end Typed API for calling Services by [sending and receiving native DTOs](/architecture-overview#client-architecture).
 
 ### Example Usage
 
