--- a/docs/_releases/v5.1.0.md
+++ b/docs/_releases/v5.1.0.md
@@ -2263,10 +2263,10 @@ jwtProvider.GetValidJwtPayload(expiredJwt);  //= null
 jwtProvider.IsValidJwt(validJwt);            //= true
 JsonObject payload = jwtProvider.GetValidJwtPayload(validJwt);
 
-var userId = validJwt["sub"];
+var userId = payload["sub"];
 ```
 
-For cases where you don't have access to HTTP Client Cookies you can use the new opt-in `IncludeJwtInConvertSessionToTokenResponse` option on `JwtAuthProvider` to include JWT's in `ConvertSession` Service Responses which are otherwise only available in the `ss-tok` Cookie. 
+For cases where you don't have access to HTTP Client Cookies you can use the new opt-in `IncludeJwtInConvertSessionToTokenResponse` option on `JwtAuthProvider` to include JWTs in `ConvertSession` Service Responses which are otherwise only available in the `ss-tok` Cookie. 
 
 
 ## Metadata
