--- a/docs/_releases/v4.0.58.md
+++ b/docs/_releases/v4.0.58.md
@@ -428,7 +428,7 @@ Being self-contained lends JWT tokens to more scalable, performant and flexible 
 require any I/O or any state to be accessed from App Servers to validate the JWT Tokens, this is unlike all 
 other Auth Providers which requires at least a DB, Cache or Network hit to authenticate the user.
 
-A good introduction into JWT is availble from the JWT website: https://jwt.io/introduction/
+A good introduction into JWT is available from the JWT website: https://jwt.io/introduction/
 
 Essentially JWT's consist of 3 parts separated by `.` with each part encoded in 
 [Base64url Encoding](https://tools.ietf.org/html/rfc4648#section-5) making it safe to encode both text and
