--- a/docs/_releases/v4.0.48.md
+++ b/docs/_releases/v4.0.48.md
@@ -314,7 +314,8 @@ container.Register<IMessageService>(c => new SqsMqServer(
 
 var mqServer = container.Resolve<IMessageService>();
 mqServer.RegisterHandler<EmailContacts.EmailContact>(ExecuteMessage);
-mqServer.Start();
+
+AfterInitCallbacks.Add(appHost => mqServer.Start());
 ```
 
 When an MQ Server is registered, ServiceStack automatically publishes Requests accepted on the "One Way" 
