--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -866,7 +866,8 @@ container.Register<IMessageService>(c => new ServiceBusMqServer(ConnectionString
 
 var mqServer = container.Resolve<IMessageService>();
 mqServer.RegisterHandler<MyRequest>(ExecuteMessage);
-mqServer.Start();
+
+AfterInitCallbacks.Add(appHost => mqServer.Start());
 ```
 
 ### Azure Blob Storage VFS
