--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -546,11 +546,11 @@ injected with an `it` binding. To make the experience more pleasant a
 [special string argument syntax](http://templates.servicestack.net/docs/syntax#special-string-argument-syntax) was also added: 
 
 ```hbs
-{{ customers | zip: it.Orders
+{% raw %}{{ customers | zip: it.Orders
    | let({ c: 'it[0]', o: 'it[1]' })
    | where: o.Total < 500
    | map: o
-   | htmlDump }}
+   | htmlDump }}{% endraw %}
 ```
 
 Whilst you can still use string expressions, its usage should be considered deprecated in all places that expect an expression given it's 
@@ -559,11 +559,11 @@ unfamiliarity which was only previously used to workaround the lack of lambda ex
 Instead you can now use lambda expression syntax:
 
 ```hbs
-{{ customers | zip(x => x.Orders)
+{% raw %}{{ customers | zip(x => x.Orders)
    | let(x => { c: x[0], o: x[1] })
    | where(_ => o.Total < 500)
    | map(_ => o)
-   | htmlDump }}
+   | htmlDump }}{% endraw %}
 ```
 
 Similar to the [Special string argument syntax](http://templates.servicestack.net/docs/syntax#special-string-argument-syntax) there's also
@@ -571,11 +571,11 @@ shorthand support for single argument lambda expressions which can instead use `
 be implicitly assigned to the `it` binding:
 
 ```hbs
-{{ customers | zip => it.Orders
+{% raw %}{{ customers | zip => it.Orders
    | let => { c: it[0], o: it[1] }
    | where => o.Total < 500
    | map => o
-   | htmlDump }}
+   | htmlDump }}{% endraw %}
 ```
 
 As it's results in more wrist-friendly and readable code, [most LINQ Examples](http://templates.servicestack.net/linq/projection-operators#linq15-selectmany---compound-from-2) have been changed to use the shorthand lambda expression syntax above.
