--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -585,13 +585,13 @@ As it's results in more wrist-friendly and readable code, [most LINQ Examples](h
 Other language enhancements include support for [JavaScript's shorthand property names](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Object_initializer#Syntax):
 
 ```hbs
-{{ {name,age} }}
+{% raw %}{{ {name,age} }}{% endraw %}
 ```
 
 But like C# also lets you use member property names:
 
 ```hbs
-{{ people | let => { it.Name, it.Age } | select: {Name},{Age} }}
+{% raw %}{{ people | let => { it.Name, it.Age } | select: {Name},{Age} }}{% endraw %}
 ```
 
 #### Template Literals
