--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -860,9 +860,9 @@ of an object and adds them to the current scope which avoids needing a prefix ea
 e.g. being able to use `{{Name}}` instead of `{{person.Name}}`:
 
 ```hbs
-{{#with person}}
+{% raw %}{{#with person}}
     Hi {{Name}}, your Age is {{Age}}.
-{{/with}}
+{{/with}}{% endraw %}
 ```
 
 The `with` Block's contents are also only evaluated if the argument expression is `null`. 
@@ -949,13 +949,13 @@ This enables the `with` block to also evaluate async responses like the async re
 it's also able to evaluate custom else statements for rendering different results based on alternate conditions, e.g:
 
 ```hbs
-{{#with dbSingle("select * from Person where id = @id", { id }) }}
+{% raw %}{{#with dbSingle("select * from Person where id = @id", { id }) }}
     Hi {{Name}}, your Age is {{Age}}.
 {{else if id == 0}}
     id is required.
 {{else}}
     No person with id {{id}} exists.
-{{/with}}
+{{/with}}{% endraw %}
 ```
 
 ### if
@@ -1069,12 +1069,12 @@ By using `ParseJsExpression()` to parse expressions after each "LINQ modifier", 
 of its LINQ querying modifiers, e.g:
 
 ```hbs
-{{#each c in customers
+{% raw %}{{#each c in customers
         where c.City == 'London' and c.Country == 'UK' orderby c.CompanyName descending
         skip 3 - (2 - 1)
         take 1 + 2 }}
   {{index + 1}}. {{c.CustomerId}} from <b>{{c.CompanyName}}</b> - {{c.City}}, {{c.Country}}.
-{{/each}}
+{{/each}}{% endraw %}
 ```
 
 ##### Custom bindings
@@ -1092,11 +1092,11 @@ template expressions like client-side JavaScript or template expressions that sh
 Vue, Angular or Ember templates:
 
 ```hbs
-{{#raw}}
+{% raw %}{{#raw}}
 <div id="app">
     {{ message }}
 </div>
-{{/raw}}
+{{/raw}}{% endraw %}
 ```
 
 When called with no arguments it will render its unprocessed raw text contents. When called with a single argument, e.g. `{{#raw varname}}` it will
@@ -1107,11 +1107,11 @@ This is now the preferred approach used in all [.NET Core and .NET Framework Web
 pages and partials to append any custom JavaScript script blocks they need to include in the page, e.g:
 
 ```hbs
-{{#raw appendTo scripts}}
+{% raw %}{{#raw appendTo scripts}}
 <script>
     //...
 </script>
-{{/raw}}
+{{/raw}}{% endraw %}
 ```
 
 Where any captured custom scripts are rendered at the 
@@ -1165,14 +1165,14 @@ public class TemplateCaptureBlock : TemplateBlock
 With this we can dynamically generate some markdown, capture its contents and convert the resulting markdown to html using the `markdown` Filter transformer:
 
 ```hbs
-{{#capture todoMarkdown { items:[1,2,3] } }}
+{% raw %}{{#capture todoMarkdown { items:[1,2,3] } }}
 ## TODO List
 {{#each items}}
   - Item {{it}}
 {{/each}}
 {{/capture}}
 
-{{todoMarkdown | markdown}}
+{{todoMarkdown | markdown}}{% endraw %}
 ```
 
 ### markdown
@@ -1181,12 +1181,12 @@ The `{{#markdown}}` block in [MarkdownTemplatePlugin.cs](https://github.com/Serv
 makes it even easier to embed markdown content directly in web pages which works as you'd expect where content in a `markdown` block is converted into HTML:
 
 ```hbs
-{{#markdown}}
+{% raw %}{{#markdown}}
 ## TODO List
   - Item 1
   - Item 2
   - Item 3
-{{/markdown}}
+{{/markdown}}{% endraw %}
 ```
 
 Which is now the easiest and preferred way to embed Markdown content in content-rich hybrid web pages like 
@@ -1243,7 +1243,7 @@ lets you create In Memory partials which is useful when working with partial fil
 it lets you declare multiple partials within the same page, instead of needing to define them in individual files, e.g:
 
 ```hbs
-{{#partial order}}
+{% raw %}{{#partial order}}
   Order {{ it.OrderId }}: {{ it.OrderDate | dateFormat }}
 {{/partial}}
 {{#partial customer}}
@@ -1255,7 +1255,7 @@ Customer {{ it.CustomerId }} {{ it.CompanyName | raw }}
     | assignTo: waCustomers 
  }}
  Customers from Washington and their orders:
- {{ waCustomers | selectPartial: customer }}
+ {{ waCustomers | selectPartial: customer }}{% endraw %}
 ```
 
 See docs on [Inline partials](http://templates.servicestack.net/docs/partials#inline-partials) for a Live comparison of using in memory partials.
@@ -1271,20 +1271,20 @@ inherit the same functionality with blocks registered for the most popular HTML 
 Ultimately they reduce boilerplate, e.g. you can generate a menu list with a single block:
 
 ```hbs
-{#ul {each:items, id:'menu', class:'nav'} }} 
+{% raw %}{{#ul {each:items, id:'menu', class:'nav'} }} 
     <li>{{it}}</li> 
-{{/ul}}
+{{/ul}}{% endraw %}
 ```
 
 A more advanced example showcasing many of its different features is contained in the example below:
 
 ```hbs
-{{#ul {if:hasAccess, each:items, where:'Age > 27', 
+{% raw %}{{#ul {if:hasAccess, each:items, where:'Age > 27', 
         class:['nav', !disclaimerAccepted ? 'blur' : ''], id:`menu-${id}`, selected:true} }}
     {{#li {class: {alt:isOdd(index), active:Name==highlight} }} {{Name}} {{/li}}
 {{else}}
     <div>no items</div>
-{{/ul}}
+{{/ul}}{% endraw %}
 ```
 
 This example utilizes many of the features in html blocks, namely:
@@ -1303,7 +1303,7 @@ if its `true` otherwise all other html attribute's names and values are emitted 
 For a better illustration we can implement the same functionality above without using any html blocks:
 
 ```hbs
-{{#if hasAccess}}
+{% raw %}{{#if hasAccess}}
     {{ items | where => it.Age > 27 | assignTo: items }}
     {{#if !isEmpty(items) }}
         <ul {{ ['nav', !disclaimerAccepted ? 'blur' : ''] | htmlClass }} id="menu-{{id}}">
@@ -1314,7 +1314,7 @@ For a better illustration we can implement the same functionality above without 
     {{else}}
         <div>no items</div>
     {{/if}}
-{{/if}}
+{{/if}}{% endraw %}
 ```
 
 The same functionality using C# Razor with the latest C# language features enabled can be implemented with:
@@ -1432,7 +1432,7 @@ This is used in the Blog Web App's [_init.html](https://github.com/NetCoreWebApp
 `blog.sqlite` database if it doesn't exist seeded with the `UserInfo` and `Posts` Tables and initial data, e.g:
 
 ```hbs
-{{  `CREATE TABLE IF NOT EXISTS "UserInfo" 
+{% raw %}{{  `CREATE TABLE IF NOT EXISTS "UserInfo" 
     (
         "UserName" VARCHAR(8000) PRIMARY KEY, 
         "DisplayName" VARCHAR(8000) NULL, 
@@ -1456,7 +1456,7 @@ This is used in the Blog Web App's [_init.html](https://github.com/NetCoreWebApp
 
 {{/if}
 
-{{ htmlError }}
+{{ htmlError }}{% endraw %}
 ```
 
 The output of the `_init` page is captured in the `initout` argument which can be later inspected as a normal template argument as seen in 
@@ -1526,7 +1526,7 @@ An API which returns the same wire response as above can be implemented in API P
 that includes the 1-liner:
 
 ```hbs
-{{ { result: `Hello, ${name}!` } | return }}
+{% raw %}{{ { result: `Hello, ${name}!` } | return }}{% endraw %}
 ```
 
 Which supports the same content negotiation as a ServiceStack Service where calling it in a browser will generate a 
@@ -1542,9 +1542,9 @@ render the API response in the JSON Format:
 Alternatively you can force a JSON Response by specifying the Content Type in the return arguments:
 
 ```hbs
-{{ { result: `Hello, ${name}!` } | return({ format: 'json' }) }} 
+{% raw %}{{ { result: `Hello, ${name}!` } | return({ format: 'json' }) }} 
 // Equivalent to:
-{{ { result: `Hello, ${name}!` } | return({ contentType: 'application/json' }) }}
+{{ { result: `Hello, ${name}!` } | return({ contentType: 'application/json' }) }}{% endraw %}
 ```
 
 More API examples showing the versatility of this feature is contained in the new [blog.web-app.io](http://blog.web-app.io) which only uses 
@@ -1557,8 +1557,8 @@ Templates and Dynamic API Pages to implement all of its functionality.
 The [/preview.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/preview.html) API page uses this to force a plain-text response with:
 
 ```hbs
-{{ content  | evalTemplate({use:{plugins:'MarkdownTemplatePlugin'}}) | assignTo:response }}
-{{ response | return({ contentType:'text/plain' }) }}
+{% raw %}{{ content  | evalTemplate({use:{plugins:'MarkdownTemplatePlugin'}}) | assignTo:response }}
+{{ response | return({ contentType:'text/plain' }) }}{% endraw %}
 ```
 
 The preview API above is what provides the new [Blog Wep App's](http://blog.web-app.io/) Live Preview feature where it will render any 
@@ -1579,12 +1579,12 @@ create data-driven APIs where you can literally return the response of a paramet
 the results:
 
 ```hbs
-{{ `SELECT * 
+{% raw %}{{ `SELECT * 
       FROM Post p INNER JOIN UserInfo u on p.CreatedBy = u.UserName 
      WHERE UserName = @user 
     ORDER BY p.Created DESC` 
    | dbSelect({ user })
-   | return }}
+   | return }}{% endraw %}
 ```
 
 The **user** argument is populated as a result of dynamic route from the `_user` directory name which will let you view all 
@@ -1608,7 +1608,7 @@ The [/posts/_slug/api.html](https://github.com/NetCoreWebApps/Blog/blob/master/a
 `404 Post was not found` HTTP Response:
 
 ```hbs
-{{ `SELECT * 
+{% raw %}{{ `SELECT * 
       FROM Post p INNER JOIN UserInfo u on p.CreatedBy = u.UserName 
      WHERE Slug = @slug 
      ORDER BY p.Created DESC` 
@@ -1616,7 +1616,7 @@ The [/posts/_slug/api.html](https://github.com/NetCoreWebApps/Blog/blob/master/a
    | assignTo: post 
 }}
 {{ post ?? httpResult({ status:404, statusDescription:'Post was not found' }) 
-   | return }}
+   | return }}{% endraw %}
 ```
 
 The `httpResult` filter returns a ServiceStack `HttpResult` which allows for the following customizations:
@@ -1638,7 +1638,7 @@ Any other unknown arguments like 'X-Powered-By' are returned as HTTP Response He
 Returning the `httpResult` above behaves similarly to customizing a HTTP response using return arguments:
 
 ```
-{{ post | return({ format:'json', 'X-Powered-By':'ServiceStack Templates' }) }}
+{% raw %}{{ post | return({ format:'json', 'X-Powered-By':'ServiceStack Templates' }) }}{% endraw %}
 ```
 
 Using the explicit `httpResult` filter is useful for returning a custom HTTP Response without a Response Body, e.g. the **New Post** page 
@@ -1647,9 +1647,9 @@ uses `httpFilter` to
 after they've successfully created a new Post:
 
 ```hbs
-{{#if success}}
+{% raw %}{{#if success}}
     {{ httpResult({ status:301, Location:`/${userName}` }) | return }}
-{{/if}}
+{{/if}}{% endraw %}
 ```
 
 For more examples and info on API Pages checkout to the [API Pages docs](http://templates.servicestack.net/docs/api-pages).
@@ -1666,7 +1666,7 @@ packed with all Queries you need to run and execute them with a [DB Filter](http
 with a [HTML Filter](http://templates.servicestack.net/docs/html-filters):
 
 ```hbs
-<!--
+{% raw %}<!--
 title: Order Report
 -->
 
@@ -1701,7 +1701,7 @@ title: Order Report
       | htmlDump({ caption: "Line Items", className }) }}
 {{else}}
   {{ `There is no Order with id: ${id}` }}
-{{/with}}
+{{/with}}{% endraw %}
 ```
 
 This will let you view the complete details of any order at the following URL:
@@ -1777,11 +1777,11 @@ All that's left is to implement the API which just needs to check to ensure the 
 the partial HTML fragment with `return`:
 
 ```hbs
-{{#if isUnsafeSql(sql) }} 
+{% raw %}{{#if isUnsafeSql(sql) }} 
     {{ `<div class="alert alert-danger">Potentially unsafe SQL detected</div>` | return }}
 {{/if}}
 
-{{ sql | dbSelect | htmlDump | return }}
+{{ sql | dbSelect | htmlDump | return }}{% endraw %}
 ```
 
 ### Live Development Workflow
@@ -2041,9 +2041,9 @@ which can be used to create [Live Documents](/posts/live-document-example) or [R
 [one of the available blocks](http://templates.servicestack.net/docs/blocks#markdown) where it will render to HTML any content between the `markdown` blocks:
 
 ```hbs
-​{#markdown}}
+{% raw %}​{#markdown}}
 ## Markdown Content
-{​{/markdown}}
+{​{/markdown}}{% endraw %}
 ```
 
 By default the [Markdig](https://github.com/lunet-io/markdig) implementation is used to render Markdown but can also be configured to use an 
@@ -2074,14 +2074,14 @@ the database instead of `localStorage`.
 The [new.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/new.html) and [edit.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/_slug/edit.html) pages shows examples of performing server validation with ServiceStack Templates:
 
 ```hbs
-{{ assignErrorAndContinueExecuting: ex }}
+{% raw %}{{ assignErrorAndContinueExecuting: ex }}
 
 {{ 'Title must be between 5 and 200 characters'      
    | onlyIf(length(postTitle) < 5 || length(postTitle) > 200) | assignTo: titleError }}
 {{ 'Content must be between 25 and 64000 characters' 
    | onlyIf(length(content) < 25  || length(content) > 64000) | assignTo: contentError }}
 {{ 'Potentially malicious characters detected'       
-   | ifNotExists(contentError) | onlyIf(containsXss(content)) | assignTo: contentError }}
+   | ifNotExists(contentError) | onlyIf(containsXss(content)) | assignTo: contentError }}{% endraw %}
 ```
 
 ![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/blog/server-validation.png)
@@ -2234,10 +2234,10 @@ Creating specific `DateTime` and `TimeSpan` values:
         calls `continueExecutingFiltersOnError` to instruct Templates to continue rendering the page when an Exception is thrown, e.g:
 
 ```hbs
-{{ assignErrorAndContinueExecuting: ex }} 
+{% raw %}{{ assignErrorAndContinueExecuting: ex }} 
 
 // Equivalent to:
-{{ assignError: ex }}{{ continueExecutingFiltersOnError }}
+{{ assignError: ex }}{{ continueExecutingFiltersOnError }}{% endraw %}
 ```
 
 ## OrmLite
