--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1151,7 +1151,7 @@ It also supports evaluating the contents with scoped arguments where by each pro
 that the template is executed with:
 
 ```csharp
-/// <summary>
+{% raw %}/// <summary>
 /// Captures the output and assigns it to the specified variable.
 /// Accepts an optional Object Dictionary as scope arguments when evaluating body.
 ///
@@ -1159,7 +1159,7 @@ that the template is executed with:
 ///         {{#capture output {nums:[1,2,3]} }} {{#each nums}} {{it}} {{/each}} {{/capture}}
 ///         {{#capture appendTo output {nums:[1,2,3]} }} {{#each nums}} {{it}} {{/each}} {{/capture}}
 /// </summary>
-public class TemplateCaptureBlock : TemplateBlock
+public class TemplateCaptureBlock : TemplateBlock{% endraw %}
 ```
 
 With this we can dynamically generate some markdown, capture its contents and convert the resulting markdown to html using the `markdown` Filter transformer:
