--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1564,7 +1564,7 @@ The [/preview.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/previ
 The preview API above is what provides the new [Blog Wep App's](http://blog.web-app.io/) Live Preview feature where it will render any 
 ServiceStack Templates provided in the **content** Query String or HTTP Post Form Data, e.g:
 
- - [/preview?content={{10|times|select:{pow(index,2)},}}](http://blog.web-app.io/preview?content={{10|times|select:{pow(index,2)},}})
+ - {% raw %}[/preview?content={{10|times|select:{pow(index,2)},}}](http://blog.web-app.io/preview?content={{10|times|select:{pow(index,2)},}}){% endraw %}
 
 Which renders the plain text response:
 
