--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -2135,8 +2135,8 @@ To the [/preview.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/pr
 Template Content its sent and returns the output:
 
 ```hbs
-{{ content  | evalTemplate({use:{plugins:'MarkdownTemplatePlugin'}}) | assignTo:response }}
-{{ response | return({ contentType:'text/plain' }) }}
+{% raw %}{{ content  | evalTemplate({use:{plugins:'MarkdownTemplatePlugin'}}) | assignTo:response }}
+{{ response | return({ contentType:'text/plain' }) }}{% endraw %}
 ```
 
 By default the `evalTemplate` filter renders Templates in a new `TemplateContext` which can be customized to utilize any additional 
@@ -2204,7 +2204,7 @@ Templates syntax. If you're only viewing your HTML Website through ServiceStack 
 empty `<i hidden></i>` in release builds:
 
 ```hbs
-{{#if debug}}<script>{{ '/js/hot-fileloader.js' | includeFile }}</script>{{/if}}
+{% raw %}{{#if debug}}<script>{{ '/js/hot-fileloader.js' | includeFile }}</script>{{/if}}{% endraw %}
 ```
 
 ### Info filters
